@@ -20,7 +20,8 @@ Changes to the standard library:
   call "univ_value(Univ)" to extract the value before calling deconstruct.
   (Doing that also works in Mercury 0.9 and Mercury 0.10.)
 
-* We've addes some new library predicates: assoc_list__keys_and_values.
+* We've addes some new library predicates: assoc_list__keys_and_values,
+  list__map2 and list__map3.
 
 NEWS since Mercury release 0.9:
 -------------------------------
